Mon Mar 22 00:47:56 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BCB2007ProjectCreator.pm:
        * modules/BCB2007WorkspaceCreator.pm:
        * modules/BDS4ProjectCreator.pm:
        * modules/BDS4WorkspaceCreator.pm:
        * modules/BMakeProjectCreator.pm:
        * modules/BMakeWorkspaceCreator.pm:
        * modules/BorlandPropertyBase.pm:
        * modules/BorlandProjectBase.pm:
        * modules/Creator.pm:
        * modules/GHSProjectCreator.pm:
        * modules/GHSPropertyBase.pm:
        * modules/GHSWorkspaceCreator.pm:
        * modules/MakeProjectBase.pm:
        * modules/MakePropertyBase.pm:
        * modules/MakeWorkspaceBase.pm:
        * modules/NMakeProjectCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VCProjectBase.pm:
        * modules/VCPropertyBase.pm:
        * modules/WinProjectBase.pm:
        * modules/WinPropertyBase.pm:
        * modules/WinWorkspaceBase.pm:
        * modules/WixWorkspaceCreator.pm:

          Modified properties to extend to workspaces instead of just
          projects to allow use of properties within exclude() statements in
          workspaces.

        * templates/wix.mpd:
        * templates/wix.mpt:

          Removed improper defaulting within an if statement and moved it
          into the template input file.

Wed Mar 17 11:55:26 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug where subtraction of a string with a path separator in
          it would not work if the resulting project uses the backslash as
          the path separator.  Thanks to Hubert Talbot for reporting this
          and supplying a patch.

Tue Mar 16 23:05:44 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/erlang.mpb:
